--- a/09-react.html
+++ b/09-react.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>react concepts</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 
     <script type="text/babel">
 
-    class StopWatch extends React.Component {
+        class StopWatch extends React.Component {
         state = {lapse: 0, running: false}
         
         handleRunClick = () => {
@@ -69,4 +70,5 @@
     </script>
 
 </body>
+
 </html>
